@startuml
class ToDoListApplication {
    + start()
    + main()
}
class FileOperator {
    - String
    - String

    - createFile(File): void
    - writeToFile(String): void
    - jsonToJava(): ToDoList
    - javaToJson(ToDoList): String
    - isFile(): boolean

    + setFilePath(String): void
    + getFilePath(): String
    + setFileName(String): void
    + getFileName(): String

    + saveToDoList(ToDoList): void
    + loadToDoList(String): ToDoList
}

class EditItemController {
    - TextField
    - TextField
    - Button
    - Button
    - Item

    + initialize(): void
    + editItemOkButtonPressed(ActionEvent event): void
    + editItemCancelButtonPressed(ActionEvent event): void
}

class AddNewItemController {
    - TextField
    - TextField
    - Button
    - Button
    - Item

    + addNewItemOkButtonPressed(ActionEvent event): void
    + addNewItemCancelButtonPressed(ActionEvent event): void
    + getNewItem(): Item
}

class DateOperator {
    + isDate(String): boolean

    - isLeapYear(int): boolean
}
class ToDoListApplicationController {
    - TableView<Item>
    - TableView.TableViewSelectionModel<Item>
    - ToDoList
    - FileChooser
    - FileOperator

    + initialize(): void
    + saveListButtonPressed(ActionEvent): void
    + loadListButtonPressed(ActionEvent): void

    + addItemButtonPressed(ActionEvent): void
    + removeItemButtonPressed(ActionEvent): void
    + clearListButtonPressed(ActionEvent): void

    + changeStatusButtonPressed(ActionEvent): void
    + editItemButtonPressed(): void

    + displayAllItemsButtonPressed(ActionEvent): void
    + displayCompletedItemsButtonPressed(ActionEvent): void
    + displayIncompleteItemsButtonPressed(ActionEvent): void

    - loadTable(): void
    - loadTable(ArrayList<Item>): void
    - readyFileChooser(String): Window
}

class ToDoList {
    - ArrayList<Item> items

    + addItem(Item): void
    + deleteItem(String): void
    + deleteAllItems(): void
    + getItems(): ArrayList<Items>
    + getSingleItem(String): Item

    + getCompletedItems(): ArrayList<Items>
    + getIncompleteItems(): ArrayList<Items>
}

class Item {
    - String description
    - String dueDate
    - boolean status

    + Item()

    + setDescription(String): void
    + getDescription(): String

    + setDueDate(String): void
    + getDueDate(): String

    + setStatus(boolean): void
    + isStatus(): boolean
}

javafx.Application <|-- ToDoListApplication
ToDoListApplication - ToDoListApplicationController
ToDoListApplicationController -- AddNewItemController
ToDoListApplicationController -- EditItemController
ToDoListApplicationController -- ToDoList
ToDoListApplicationController -- FileOperator
ToDoList -- Item
Item - DateOperator

@enduml